[gd_scene load_steps=2 format=3 uid="uid://bmm8g2q8fl2ro"]

[ext_resource type="Script" uid="uid://6dltndqqq6yt" path="res://AnchorProgramDemos.gd" id="1_qrfu5"]

[node name="AnchorProgramDemos" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
script = ExtResource("1_qrfu5")

[node name="Label" type="Label" parent="."]
layout_mode = 2

[node name="AnchorProgram" type="AnchorProgram" parent="."]

[node name="AnchorProgram2" type="AnchorProgram" parent="."]
idl = {
"instructions": [{
"accounts": [{
"isMut": true,
"isSigner": false,
"name": "mut_nonsigner"
}, {
"isMut": false,
"isSigner": true,
"name": "imut_signer"
}],
"args": [{
"name": "index",
"type": "u32"
}, {
"name": "test_type",
"type": {
"vec": {
"defined": "test_type"
}
}
}],
"name": "test_instruction"
}],
"name": "test_program",
"types": [{
"name": "test_type",
"type": {
"fields": [{
"name": "name",
"type": "string"
}, {
"name": "uri",
"type": "string"
}],
"kind": "struct"
}
}],
"version": "0.0.1"
}

[node name="Timeout" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="IdlTree" type="Tree" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="IdlTree2" type="Tree" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="AccountDataTree" type="Tree" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[connection signal="timeout" from="Timeout" to="." method="_on_timeout_timeout"]
